# Lem_in

./: .lem.h.swp  .main.c.swp  Makefile  a.out  get_next_line.c  lem-in  lem.h  main.c  map  map4  test  Жцй
include/: lem.h  lem_in.h
lem_in_read/: .lem_in.h.swp  CMakeLists.txt  Makefile  depth_first_search.c  for_testing.c  get_next_line.c  lem-in  lem_in.h  main.c  neighbours.c  read_lem.c  read_link.c  read_room.c  read_start_and_end.c  stack.c  vertex_init.c
lem_in_read/lem-in.dSYM/Contents/Resources/DWARF/: lem-in
lem_in_read/libft/: Makefile  ft_check_int.c
lem_in_read/map/: 123
lem_read/: .lem_in.h.swp  .main.c.swp  .read_start_and_end.c.swp  .temp.swp  Makefile  a.out  for_testing.c  ft_error.c  ft_free_lem.c  ft_free_mas_strings.c  lem_in.h  main.c  read_lem.c  read_room.c  read_start_and_end.c  s  temp  test  test2  work.c
lem_read/libft/: ft_atoi.c  ft_size_mas_strings.c  ft_str_split_one_char.c  libft.h
lem_read/map/: map_git  map_git2
maps/: --flow-ten  big  big-superposition  flow-one  flow-ten  flow-thousand  leak100  long  long_Chloe  map  map1  map1step  map1step2path  map2  map2path2or4len  map3  map3path  map4  map4cop  map5  map6
source/: .main.c.swp  ft_isdigit.c  ft_strisdigit.c  lem_in.h  main.c  neighbours.c  op  temp  test3  work.c
source/eskeleto/: ft_check_int.c  ft_free_lem.c  ft_size_mas_strings.c  ft_str_split_one_char.c  read_lem.c  read_link.c  work.c
source/libft/: ft_free_mas_strings.c
source/map/: 123  anil  (+1 more)
visual/: .Makefile.swp  .main.c.swp  Makefile  a.out  lem_vis.h  main.c  test  test2  test3  visual
(+47 files in other folders)
